--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Api</title>
 </head>
 <body>
-    
+    <!--cmd curl http:// website you want -->
+    <!--wget http:// bootswatch example-->
+    <!--swapi-->
 </body>
 </html>
