--- a/ajax-test/index.html
+++ b/ajax-test/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <!--XHR XMLHttpRequest call external api's from java application-->
+    <button onclick="writeToDocument('people')">People</button>
+    <button onclick="writeToDocument('planets')">Planets</button>
+    <button onclick="writeToDocument('species')">Species</button>
+    <button onclick="writeToDocument('Starships')">Starships</button>
+    <button onclick="writeToDocument('vehicles')">Vehicles</button>
+    <button onclick="writeToDocument('movies')">Movies</button>
     <div id="data"></div>
     <script type="text/javascript" src="main.js"></script>
 </body>
