--- a/ajax-test/index.html
+++ b/ajax-test/index.html
@@ -12,9 +12,9 @@
     <button onclick="writeToDocument('people')">People</button>
     <button onclick="writeToDocument('planets')">Planets</button>
     <button onclick="writeToDocument('species')">Species</button>
-    <button onclick="writeToDocument('Starships')">Starships</button>
+    <button onclick="writeToDocument('starships')">Starships</button>
     <button onclick="writeToDocument('vehicles')">Vehicles</button>
-    <button onclick="writeToDocument('movies')">Movies</button>
+    <button onclick="writeToDocument('films')">Films</button>
     <div id="data"></div>
     <script type="text/javascript" src="main.js"></script>
 </body>
