--- a/resume mini project/contact.html
+++ b/resume mini project/contact.html
@@ -21,7 +21,7 @@
     <header class="container-fluid">
         <div class="row">
             <a href="index.html">
-            <div class="col-md-4 logo">
+            <div class="col-md-4">
                 
             </div>
             </a>
